[gd_scene load_steps=6 format=3 uid="uid://gs20g6gppkdp"]

[ext_resource type="Script" uid="uid://7wlfiar7jag6" path="res://pause_menu.gd" id="1_hdmo1"]
[ext_resource type="Shader" uid="uid://dwr1i1vnsojeb" path="res://voronoi.gdshader" id="2_nwcfo"]
[ext_resource type="PackedScene" uid="uid://bp5qgw4jrj5tl" path="res://settings.tscn" id="3_05uyy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05uyy"]
shader = ExtResource("2_nwcfo")
shader_parameter/resolution = Vector2(1152, 648)
shader_parameter/color_a = Color(0.000211535, 0.169138, 0.581906, 1)
shader_parameter/color_b = Color(0.0193078, 0.642686, 0.769386, 1)
shader_parameter/color_c = Color(0.69, 0.69, 0.69, 1)
shader_parameter/color_d = Color(0.243137, 0.203922, 0.305882, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nwcfo"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_hdmo1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_05uyy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Settings" parent="." instance=ExtResource("3_05uyy")]
visible = false
layout_mode = 1

[node name="MenuNodes" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuNodes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -270.0
offset_right = 150.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nwcfo")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuNodes/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="RESUME" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "RESUME"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/RESUME"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="STATS" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "STATS
"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/STATS"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="OPTIONS" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "OPTIONS"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/OPTIONS"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="RESTART" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "RESTART
"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/RESTART"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="QUIT" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "BACK
"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/QUIT"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/STATS" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/RESTART" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
